--- a/package.json
+++ b/package.json
@@ -23,15 +23,17 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-router-typesafe-routes": "^1.2.1",
+    "relative-time-format": "^1.1.6",
     "s-ago": "^2.2.0",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react-swc": "^3.3.2",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
