--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "backend-codegen": "openapi-typescript http://127.0.0.1:8000/openapi.json -o src/backend-schema.d.ts"
   },
   "dependencies": {
+    "@ericblade/quagga2": "^1.8.4",
     "@mantine/core": "^7.2.2",
     "@mantine/dates": "^7.2.2",
     "@mantine/form": "^7.2.2",
     "@mantine/hooks": "^7.2.2",
     "@tabler/icons-react": "^2.40.0",
+    "@zxing/library": "^0.20.0",
     "dayjs": "^1.11.10",
     "openapi-typescript": "^6.7.1",
     "openapi-typescript-fetch": "^1.1.3",
@@ -23,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-router-typesafe-routes": "^1.2.1",
+    "react-webcam": "^7.2.0",
     "relative-time-format": "^1.1.6",
     "s-ago": "^2.2.0",
     "swr": "^2.2.4",
